2008-04-12  Peter Bloomfield

	* libbalsa/mailbox_maildir.c: (lbm_maildir_parse_subdirs,
	libbalsa_mailbox_maildir_sync): make sure the tree is saved
	after reparsing subdirs.

2008-04-09  Pawel Salek

	* src/sendmsg-window.c: make postpone button and menu entry work.
	* libbalsa/message.c: do not complain when setting headers->from again.
	* libbalsa/imap/imap-handle.[ch]: make set_timeout() return the
	old value.
	* libbalsa/imap/imap_private.h: add HANDLE_TRYLOCK macro.
	* libbalsa/imap/imap-commands.c: use it for noop().

2008-04-06  Pawel Salek

	* libbalsa/imap/imap-handle.h: fix that macro.

2008-04-06  Pawel Salek

	* libbalsa/mailbox_imap.c: initalise ImapSequence data.
	* libbalsa/imap/imap-handle.h: provide a macro for that purpose.

2008-04-03  Pawel Salek

	* libbalsa/mailbox_imap.c: don't print warnings on copy when
	UIDPLUS is unavailable. Better code reuse.
	* libbalsa/message.c: don't modify invariants.

2008-04-02  Ildar Mulyukov <ildar at altlinux dot ru>

	* src/sendmsg-window.c: Some RU/KZ locales fixes.

2008-04-01  Pawel Salek

	* libbalsa/mailbox_imap.c: use UIDPLUS information returned by server
	to improve caching.
	* libbalsa/imap/imap-handle.[ch]: parse returned UIDPLUS data.
	* libbalsa/imap/imap_private.h: add ImapMboxHandle::uidplus field.
	* libbalsa/imap/imap-commands.[ch]: add API for accessing UIDPLUS data.

2008-03-31  Pawel Salek

	* src/spell-check.h: remove lingering reference to pspell.h
	* balsa.spec.in: update to modern standards.

2008-03-30  Peter Bloomfield

	* src/filter-edit-callbacks.c: (fill_condition_widgets): fix a
	critical warning.

2008-03-29  Jean-Luc Coulon

	* doc/C/balsa.xml: fix typos.

2008-03-26  Peter Bloomfield

	* src/balsa-message.c: (add_toggle_inline_menu_item): clear
	force-inline when we create a new check-box.

2008-03-25  Pawel Salek

	* src/balsa-index.c: pass "peek" parameter to get_message_stream().
	* libbalsa/{message,source-viewer}.c: ditto.